<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/green_transp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="@dimen/medium"
        android:contentDescription="Kembali"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?actionBarSize"
        android:background="@drawable/bg_white_round"
        android:orientation="vertical"
        android:padding="@dimen/large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/dishub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            android:gravity="center"
            android:text="@string/hi"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/small"
            android:background="@drawable/bg_radius"
            android:backgroundTint="@color/green_transp"
            android:gravity="center_horizontal"
            android:paddingHorizontal="50dp"
            android:paddingVertical="5dp"
            android:textAlignment="center"
            android:textColor="@color/green_font"
            android:textSize="13dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_email"
            android:layout_marginTop="@dimen/medium"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/green_font"
            app:boxCornerRadiusBottomEnd="@dimen/medium"
            app:boxCornerRadiusBottomStart="@dimen/medium"
            app:boxCornerRadiusTopEnd="@dimen/medium"
            app:boxCornerRadiusTopStart="@dimen/medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_msg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/medium"
                android:textColor="@color/green_font" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/error_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pw"
            android:textColorHint="@color/green_font"
            android:layout_marginTop="@dimen/medium"
            app:boxCornerRadiusBottomEnd="@dimen/medium"
            app:boxCornerRadiusBottomStart="@dimen/medium"
            app:boxCornerRadiusTopEnd="@dimen/medium"
            app:boxCornerRadiusTopStart="@dimen/medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/medium"
                android:textColor="@color/green_font" />
        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Holo.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/eastern_blue"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/large"
            android:layout_marginTop="@dimen/large"
            app:layout_constraintTop_toBottomOf="@+id/error_password"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>